# RetroMol.Core

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  environment-dev.yaml  pyproject.toml  setup.py
data/: sample.csv  sample.tsv  sample1.csv  sample2.csv  sample3.csv
docs/source/: api.rst  conf.py  index.rst  module_chem_utils.rst  module_error_parsing.rst  module_gen_utils.rst  module_reaction.rst  usage.rst
scripts/: pmi_analysis.py  run_tests.sh
src/moltools/: reaction.py
src/retromol_core/: chem_utils.py  error_parsing.py  gen_utils.py  geom.py  reaction.py  utils.py
tests/: test_chem_utils.py  test_example.py  test_reaction.py  test_utils.py
