[build-system]
requires = ["setuptools>=68.1.2"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "RetroMol.Core"
version = "0.0.1"
description = "Reaction chemistry using RDKit-powered functions."
authors = ["David Meijer <david.meijer@wur.nl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
rdkit = "^2023.03.1"
numpy = "^1.25.2"

[tool.poetry.dev-dependencies]
pre-commit = "^3.3.3"

[tool.poetry.packages]
include = ["retromol_core"]